--- a/packages/view/public/index.html
+++ b/packages/view/public/index.html
@@ -8,6 +8,7 @@
     />
     <script>
       window.isProduction = false;
+      window.theme = "githru";
     </script>
     <title>Githru</title>
   </head>
